[tool.poetry]
name = "kelly-formula"
version = "0.1.0"
description = "For my youtube video on the Kelly Formula"
authors = ["bee-san <github@skerritt.blog>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^10.6.0"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
